Remove hide closed accounts option from config

(cherry picked from commit 445958f5b904db1d8a5a1d9623b082577bc5475a)

BUG: 223708
FIXED-IN: 5.1.3