kmymoney/views/kgloballedgerview_p.h
@@ -413,7 +413,7 @@ public:
         // TODO: check why the invalidate is needed here
         m_filterProxyModel->invalidate();
         m_filterProxyModel->sort((int)eAccountsModel::Column::Account);
-        m_filterProxyModel->setHideClosedAccounts(KMyMoneySettings::hideClosedAccounts() && !KMyMoneySettings::showAllAccounts());
+        m_filterProxyModel->setHideClosedAccounts(!KMyMoneySettings::showAllAccounts());
         m_filterProxyModel->setHideEquityAccounts(!KMyMoneySettings::expertMode());
         m_accountComboBox->expandAll();
 
