kmymoney/views/kinvestmentview_p.h
@@ -166,11 +166,11 @@ public:
     void loadInvestmentTab()
     {
         Q_Q(KInvestmentView);
-        m_equitiesProxyModel->setHideClosedAccounts(KMyMoneySettings::hideClosedAccounts() && !KMyMoneySettings::showAllAccounts());
+        m_equitiesProxyModel->setHideClosedAccounts(!KMyMoneySettings::showAllAccounts());
         m_equitiesProxyModel->setHideZeroBalanceAccounts(KMyMoneySettings::hideZeroBalanceEquities());
         m_equitiesProxyModel->invalidate();
 
-        m_accountsProxyModel->setHideClosedAccounts(KMyMoneySettings::hideClosedAccounts() && !KMyMoneySettings::showAllAccounts());
+        m_accountsProxyModel->setHideClosedAccounts(!KMyMoneySettings::showAllAccounts());
         m_accountsProxyModel->invalidate();
 
         if (!m_idInvAcc.isEmpty()) {                                          // check if account to be selected exist
